--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* My Style */
+
+.shop-card {
+  transition: all .5s;
+  color: #566a7f;
+}
+
+.shop-card-text {
+  text-decoration: none;
+}
+
+.shop-card:hover {
+  transform: scale(1.025);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
