--- a/src/index.css
+++ b/src/index.css
@@ -14,16 +14,46 @@ code {
 
 /* My Style */
 
-.shop-card {
+.custom-card {
   transition: all .5s;
   color: #566a7f;
 }
 
-.shop-card-text {
+.custom-card-text {
   text-decoration: none;
 }
 
-.shop-card:hover {
+.custom-card:hover {
   transform: scale(1.025);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.product-brief-description {
+  height: 90px;
+  overflow: hidden;
+}
+
+.card-for-modal {
+  text-align: start;
+  padding: 0;
+  border: none;
+}
+
+.product-details-img {
+  border-radius: 8px;
+}
+
+.carousel .thumb,
+.carousel .thumb.selected,
+.carousel .thumb:hover {
+  border-radius: 14px;
+}
+
+.carousel.carousel-slider .control-arrow {
+  border-radius: 8px;
+}
+
+.product-card-img-top {
+  max-height: 200px;
+  object-fit: cover;
 }
