--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,17 @@ code {
   max-height: 200px;
   object-fit: cover;
 }
+
+.custom-searchbar {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-color: #8592a3;
+}
+
+.custom-searchbar:focus {
+  border-color: #8592a3;
+}
+
+.custom-searchbar-btn {
+  box-shadow: none;
+}
